--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 							
 									</p>
 								</header>
-								
+								<a href="#" class="image main"><img src="images\bg.jpeg" alt="" /></a>
+								<ul class="actions special">
+								</ul>
 							</article>
 
 						<!-- Posts -->
